k8s/3-trickslist-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: trickslist-api-svc
spec:
  type: NodePort
  selector:
    app: trickslist-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trickslist-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trickslist-api-pod
  template:
    metadata:
      labels:
        app: trickslist-api-pod
    spec:
      containers:
        - name: trickslist
          image: bartheme/trickslist-api
          ports:
            - containerPort: 8080
