k8s/5-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trickslist-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /trickslist-api(/|$)(.*)
            backend:
              service:
                name: trickslist-api-svc
                port:
                  number: 8080
